[gd_scene load_steps=50 format=3 uid="uid://sbenj0qdg1bj"]

[ext_resource type="Script" path="res://player.gd" id="1_eiakb"]
[ext_resource type="Texture2D" uid="uid://c7khvyhkwvpss" path="res://sprites/FuelEmpty.png" id="1_l8oj6"]
[ext_resource type="Texture2D" uid="uid://cubx6rk4o265q" path="res://sprites/Timeline 1_0000-sheet.png" id="3_kefhh"]
[ext_resource type="Texture2D" uid="uid://fu6n3f4643a0" path="res://sprites/RedBar.png" id="3_kug64"]
[ext_resource type="PackedScene" uid="uid://cn26jqfqdu51d" path="res://scenes/player scene/destruction_particles.tscn" id="4_5cftr"]
[ext_resource type="Texture2D" uid="uid://cx0wg8qiqw1d8" path="res://sprites/ShieldPlaceholder.png" id="5_g5tb8"]
[ext_resource type="Script" path="res://scenes/player scene/off_screen_indicator.gd" id="7_5eown"]
[ext_resource type="AudioStream" uid="uid://pl81vctuetug" path="res://Sounds/Explosion_1.wav" id="8_xfoyv"]
[ext_resource type="AudioStream" uid="uid://du3l1dctsdifg" path="res://Sounds/Explosion_2.wav" id="9_j6fl7"]
[ext_resource type="AudioStream" uid="uid://bxaiay1gy7op3" path="res://Sounds/Explosion_3.wav" id="10_1bl3s"]
[ext_resource type="AudioStream" uid="uid://cxc7a8sr406xd" path="res://Sounds/Gas.wav" id="11_eedor"]
[ext_resource type="Script" path="res://scenes/player scene/new/audio_explosion.gd" id="11_l8ycw"]
[ext_resource type="Script" path="res://scenes/player scene/new/audio_gas.gd" id="13_s3bst"]
[ext_resource type="Script" path="res://scenes/player scene/new/flash_component.gd" id="14_1owdd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nqwd3"]
atlas = ExtResource("3_kefhh")
region = Rect2(0, 0, 400, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7yt3"]
atlas = ExtResource("3_kefhh")
region = Rect2(400, 0, 400, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjvpy"]
atlas = ExtResource("3_kefhh")
region = Rect2(800, 0, 400, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_klexk"]
atlas = ExtResource("3_kefhh")
region = Rect2(1200, 0, 400, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_okrrj"]
atlas = ExtResource("3_kefhh")
region = Rect2(1600, 0, 400, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjxgh"]
atlas = ExtResource("3_kefhh")
region = Rect2(2000, 0, 400, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_hm3l1"]
atlas = ExtResource("3_kefhh")
region = Rect2(2400, 0, 400, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qmdp"]
atlas = ExtResource("3_kefhh")
region = Rect2(2800, 0, 400, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_ro5r3"]
atlas = ExtResource("3_kefhh")
region = Rect2(3200, 0, 400, 600)

[sub_resource type="SpriteFrames" id="SpriteFrames_4uo1t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqwd3")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7yt3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjvpy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klexk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_okrrj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjxgh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hm3l1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qmdp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ro5r3")
}],
"loop": true,
"name": &"moving",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u25fl"]
radius = 62.5
height = 430.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pcrc7"]
radius = 80.0
height = 272.0

[sub_resource type="AtlasTexture" id="AtlasTexture_4bd4d"]
atlas = ExtResource("5_g5tb8")
region = Rect2(0, 0, 128, 272)

[sub_resource type="AtlasTexture" id="AtlasTexture_yryhy"]
atlas = ExtResource("5_g5tb8")
region = Rect2(128, 0, 128, 272)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jyd5"]
atlas = ExtResource("5_g5tb8")
region = Rect2(256, 0, 128, 272)

[sub_resource type="AtlasTexture" id="AtlasTexture_lp7lu"]
atlas = ExtResource("5_g5tb8")
region = Rect2(384, 0, 128, 272)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmaj1"]
atlas = ExtResource("5_g5tb8")
region = Rect2(512, 0, 128, 272)

[sub_resource type="AtlasTexture" id="AtlasTexture_of26g"]
atlas = ExtResource("5_g5tb8")
region = Rect2(640, 0, 128, 272)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6mpa"]
atlas = ExtResource("5_g5tb8")
region = Rect2(768, 0, 128, 272)

[sub_resource type="AtlasTexture" id="AtlasTexture_skd1p"]
atlas = ExtResource("5_g5tb8")
region = Rect2(896, 0, 128, 272)

[sub_resource type="AtlasTexture" id="AtlasTexture_1lai8"]
atlas = ExtResource("5_g5tb8")
region = Rect2(1024, 0, 128, 272)

[sub_resource type="AtlasTexture" id="AtlasTexture_cuh74"]
atlas = ExtResource("5_g5tb8")
region = Rect2(1152, 0, 128, 272)

[sub_resource type="AtlasTexture" id="AtlasTexture_0g0ob"]
atlas = ExtResource("5_g5tb8")
region = Rect2(1280, 0, 128, 272)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcf7q"]
atlas = ExtResource("5_g5tb8")
region = Rect2(1408, 0, 128, 272)

[sub_resource type="AtlasTexture" id="AtlasTexture_typw6"]
atlas = ExtResource("5_g5tb8")
region = Rect2(1536, 0, 128, 272)

[sub_resource type="AtlasTexture" id="AtlasTexture_bimw0"]
atlas = ExtResource("5_g5tb8")
region = Rect2(1664, 0, 128, 272)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsykh"]
atlas = ExtResource("5_g5tb8")
region = Rect2(1792, 0, 128, 272)

[sub_resource type="AtlasTexture" id="AtlasTexture_yynfb"]
atlas = ExtResource("5_g5tb8")
region = Rect2(1920, 0, 128, 272)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2obg"]
atlas = ExtResource("5_g5tb8")
region = Rect2(2048, 0, 128, 272)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8cb4"]
atlas = ExtResource("5_g5tb8")
region = Rect2(2176, 0, 128, 272)

[sub_resource type="AtlasTexture" id="AtlasTexture_agek7"]
atlas = ExtResource("5_g5tb8")
region = Rect2(2304, 0, 128, 272)

[sub_resource type="SpriteFrames" id="SpriteFrames_6p2rv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bd4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yryhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jyd5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lp7lu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmaj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_of26g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6mpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_skd1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1lai8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cuh74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0g0ob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcf7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_typw6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bimw0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsykh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yynfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2obg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8cb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agek7")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2obg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yynfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsykh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bimw0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_typw6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcf7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0g0ob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cuh74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1lai8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_skd1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6mpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_of26g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmaj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lp7lu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jyd5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yryhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bd4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8cb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agek7")
}, {
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_if28d"]
radius = 66.0
height = 436.0

[sub_resource type="AtlasTexture" id="AtlasTexture_bblw3"]
atlas = ExtResource("3_kefhh")
region = Rect2(0, 0, 400, 600)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_w40r0"]
streams_count = 3
stream_0/stream = ExtResource("8_xfoyv")
stream_0/weight = 1.0
stream_1/stream = ExtResource("9_j6fl7")
stream_1/weight = 1.0
stream_2/stream = ExtResource("10_1bl3s")
stream_2/weight = 1.0

[node name="Player" type="RigidBody2D" groups=["player"]]
script = ExtResource("1_eiakb")

[node name="FuelBar" type="TextureProgressBar" parent="."]
offset_left = 14.0
offset_top = -62.0
offset_right = 273.0
offset_bottom = 8.0
rotation = 1.5708
scale = Vector2(0.4, 0.4)
value = 100.0
fill_mode = 1
texture_under = ExtResource("1_l8oj6")
texture_progress = ExtResource("3_kug64")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = 0.0698132
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_4uo1t")
animation = &"moving"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -24)
scale = Vector2(0.4, 0.4)
shape = SubResource("CapsuleShape2D_u25fl")

[node name="ShieldArea" type="Area2D" parent="." groups=["shield"]]
position = Vector2(0, -24)
scale = Vector2(0.8, 0.8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShieldArea"]
position = Vector2(-3, 11)
shape = SubResource("CapsuleShape2D_pcrc7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="ShieldArea"]
modulate = Color(0, 0, 0, 0.588235)
position = Vector2(-3, 11)
scale = Vector2(1.25, 1)
sprite_frames = SubResource("SpriteFrames_6p2rv")
autoplay = "default"
frame_progress = 0.794537

[node name="ShieldCooldown" type="Timer" parent="ShieldArea"]
wait_time = 10.0
one_shot = true

[node name="AudioShieldOn" type="AudioStreamPlayer" parent="ShieldArea"]
volume_db = -10.0
bus = &"SFX"

[node name="AudioShieldOff" type="AudioStreamPlayer" parent="ShieldArea"]
volume_db = -10.0
bus = &"SFX"

[node name="PlayerArea" type="Area2D" parent="." groups=["player"]]
position = Vector2(0, -24)
scale = Vector2(0.4, 0.4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerArea"]
shape = SubResource("CapsuleShape2D_if28d")

[node name="GPUParticles2D" parent="." instance=ExtResource("4_5cftr")]
position = Vector2(2, -32)

[node name="OffScreenIndicator" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0.588235)
scale = Vector2(0.1, 0.1)
script = ExtResource("7_5eown")

[node name="Indicator" type="TextureRect" parent="OffScreenIndicator"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -300.0
offset_right = 200.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(200, 300)
size_flags_horizontal = 4
texture = SubResource("AtlasTexture_bblw3")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="OffScreenIndicator"]
position = Vector2(-4.99998, -12.5)
scale = Vector2(14.5, 43.75)

[node name="AudioExplosion" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_w40r0")
volume_db = -9.0
bus = &"SFX"
script = ExtResource("11_l8ycw")

[node name="AudioGas" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_eedor")
volume_db = -12.0
bus = &"SFX"
script = ExtResource("13_s3bst")

[node name="FlashComponent" type="Node" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("14_1owdd")
player = NodePath("../AnimatedSprite2D")

[connection signal="player_death_signal" from="." to="AudioExplosion" method="_on_player_player_death_signal"]
[connection signal="player_death_signal" from="." to="AudioGas" method="_on_player_player_death_signal"]
[connection signal="thrust_ended" from="." to="AudioGas" method="_on_player_thrust_ended"]
[connection signal="thrust_started" from="." to="AudioGas" method="_on_player_thrust_started"]
[connection signal="timeout" from="ShieldArea/ShieldCooldown" to="." method="_on_shield_cooldown_timeout"]
[connection signal="area_entered" from="PlayerArea" to="." method="_on_player_area_entered"]
[connection signal="body_entered" from="PlayerArea" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_entered" from="OffScreenIndicator/VisibleOnScreenNotifier2D" to="OffScreenIndicator" method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="OffScreenIndicator/VisibleOnScreenNotifier2D" to="OffScreenIndicator" method="_on_visible_on_screen_notifier_2d_screen_exited"]
